--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 
 	<body>
-		<stop-light />
+		<stop-light initial="yellow" />
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
